--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
-    background-color: rgba(31, 115, 254, 255);
+    background-color: #1f73fe;
 }
 
 .bgimge {
@@ -12,7 +12,6 @@ body {
     width: 100%;
     position: fixed;
     z-index: -1;
-    /* opacity: .7; */
 }
 
 .hdding {
@@ -68,6 +67,11 @@ body {
     font-size: 1.2rem;
 }
 
+.loadingsrc,
+.gif {
+    display: none;
+}
+
 @media (max-width:700px) {
 
     .mainbox1 {
@@ -82,5 +86,22 @@ body {
     .word {
         display: block;
 
+    }
+
+    .loadingsrc {
+        display: block;
+        width: 60%;
+        margin-top: 23%;
+        height: 14.5rem;
+        border-radius: 50%;
+
+
+    }
+
+    .gif {
+        width: 50%;
+        display: block;
+        border-radius: 35%;
+        margin-top: 16%;
     }
 }
